[package]
name = "irmars"
version = "0.1.0"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"

[dependencies]
jsonwebtoken = "6"
reqwest = { version = "0.9", features = ["rustls-tls"], default-features = false }
serde = "1.0.99"
serde_json = "1.0.40"
tokio = "0.1.22"
futures = "0.1.28"
qrcode = { version = "0.11.0", default-features = false }