[package]
name = "irma"
description = "A client library for IRMA, a privacy-friendly identity platform for both authentication and signing"
version = "0.0.1"
authors = ["Wouter Geraedts <git@woutergeraedts.nl>"]
edition = "2018"
repository = "https://github.com/wassasin/irmars"
keywords = ["authentication", "signing"]
categories = ["authentication"]
license = "MIT"

[dependencies]
jsonwebtoken = "7"
reqwest = { version = "0.9", features = ["rustls-tls"], default-features = false }
serde = "1.0"
serde_json = "1.0"
futures = "0.1"
